--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@v21
       - uses: DeterminateSystems/magic-nix-cache-action@v13
+      - name: remove the existing gradle.lock
+        run: rm nix/gradle.lock
       - name: resolve-gradle-deps
         run: nix develop -c resolve-gradle-deps
       - name: regen-lock
         run: nix develop -c regen-lock
-      - name: ensure no changes
+      - name: ensure the same gradle.lock got generated
         run: git diff --exit-code && git diff --cached --exit-code
 
   build:
